Update backend and frontend, remove node_modules from repo